Bug 446144 - Overview does not trigger KRunner's webrunners and open browser favorite
Summary: Overview does not trigger KRunner's webrunners and open browser favorite
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-overview (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-11-27 00:51 UTC by Thiago Sueto
Modified: 2022-02-15 18:46 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thiago Sueto 2021-11-27 00:51:55 UTC
I tested all of KRunner's runners and only these two do not trigger for me.

STEPS TO REPRODUCE
1a. Have favorites in your browser
2a. Open Overview
3a. Type a keyword from one of your browser favorites
4a. Press Enter

1b. Ensure a search webrunner like DuckDuckGo is enabled (keyword is d)
2b. Open Overview
3b. Type d: searchqueryhere (or d searchqueryhere if you set the delimiter as space instead of : )
4b. Press Enter

Browser does not open with either of those options.

SYSTEM INFORMATION
Operating System: openSUSE Tumbleweed 20211124
KDE Plasma Version: 5.23.80
KDE Frameworks Version: 5.89.0
Qt Version: 5.15.2
Kernel Version: 5.15.3-1-default (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Core™ i7-5500U CPU @ 2.40GHz
Memory: 7.7 GiB of RAM
Graphics Processor: Mesa Intel® HD Graphics 5500
Comment 1 Vlad Zahorodnii 2022-02-09 22:39:14 UTC
Feb 10 00:37:03 lithium kwin_wayland_wrapper[1080]: kf.service.services: KApplicationTrader: mimeType "x-scheme-handler/d" not found
Feb 10 00:37:03 lithium kwin_wayland_wrapper[1080]: kf.service.services: KApplicationTrader: mimeType "x-scheme-handler/d" not found
Feb 10 00:37:03 lithium kwin_wayland_wrapper[1080]: QObject::connect: signal not found in OrgKdeActivityManagerResourcesLinkingInterface
Feb 10 00:37:03 lithium kwin_wayland_wrapper[1080]: QObject::connect: signal not found in OrgKdeActivityManagerResourcesLinkingInterface
Feb 10 00:37:03 lithium kwin_wayland_wrapper[1080]: kf.service.services: KApplicationTrader: mimeType "x-scheme-handler/d" not found
Feb 10 00:37:03 lithium kwin_wayland_wrapper[1080]: kf.service.services: KApplicationTrader: mimeType "x-scheme-handler/d" not found
Feb 10 00:37:03 lithium kwin_wayland_wrapper[1080]: QObject::connect: signal not found in OrgKdeActivityManagerResourcesLinkingInterface
Feb 10 00:37:03 lithium kwin_wayland_wrapper[1080]: QObject::connect: signal not found in OrgKdeActivityManagerResourcesLinkingInterface
Feb 10 00:37:03 lithium kwin_wayland_wrapper[1080]: kf.service.services: KApplicationTrader: mimeType "x-scheme-handler/d" not found
Feb 10 00:37:03 lithium kwin_wayland_wrapper[1080]: kf.service.services: KApplicationTrader: mimeType "x-scheme-handler/d" not found
Feb 10 00:37:03 lithium kwin_wayland_wrapper[1080]: QObject::connect: signal not found in OrgKdeActivityManagerResourcesLinkingInterface
Feb 10 00:37:03 lithium kwin_wayland_wrapper[1080]: QObject::connect: signal not found in OrgKdeActivityManagerResourcesLinkingInterface
Feb 10 00:37:03 lithium kwin_wayland_wrapper[1080]: kf.service.services: KApplicationTrader: mimeType "x-scheme-handler/d" not found
Feb 10 00:37:03 lithium kwin_wayland_wrapper[1080]: kf.service.services: KApplicationTrader: mimeType "x-scheme-handler/d" not found
Feb 10 00:37:04 lithium kwin_wayland_wrapper[1080]: QObject::connect: signal not found in OrgKdeActivityManagerResourcesLinkingInterface
Feb 10 00:37:04 lithium kwin_wayland_wrapper[1080]: QObject::connect: signal not found in OrgKdeActivityManagerResourcesLinkingInterface
Feb 10 00:37:04 lithium kwin_wayland_wrapper[1080]: kf.service.services: KApplicationTrader: mimeType "x-scheme-handler/d" not found
Feb 10 00:37:04 lithium kwin_wayland_wrapper[1080]: kf.service.services: KApplicationTrader: mimeType "x-scheme-handler/d" not found
Feb 10 00:37:04 lithium kwin_wayland_wrapper[1080]: QObject::connect: signal not found in OrgKdeActivityManagerResourcesLinkingInterface
Feb 10 00:37:04 lithium kwin_wayland_wrapper[1080]: QObject::connect: signal not found in OrgKdeActivityManagerResourcesLinkingInterface
Feb 10 00:37:04 lithium kwin_wayland_wrapper[1080]: kf.service.services: KApplicationTrader: mimeType "x-scheme-handler/d" not found
Feb 10 00:37:04 lithium kwin_wayland_wrapper[1080]: kf.service.services: KApplicationTrader: mimeType "x-scheme-handler/d" not found
Feb 10 00:37:06 lithium kwin_wayland_wrapper[1080]: The platform plugin does not support services.

I see this in kwin_wayland log. Not sure what the issue can be. CC'ing Alexander
Comment 2 Alexander Lohnau 2022-02-10 18:02:51 UTC
Not sure, unfortunately my shortcuts are kindof broken ATM (not sure why). I will see at the weekend if I can debug this further.
Comment 3 Bug Janitor Service 2022-02-10 20:18:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1446
Comment 4 Nicolas Fella 2022-02-10 20:25:52 UTC
> kf.service.services: KApplicationTrader: mimeType "x-scheme-handler/d" not found

this looks like it's trying to open a d:foobar URL?
Comment 5 Alexander Lohnau 2022-02-10 20:31:11 UTC
(In reply to Nicolas Fella from comment #4)
> > kf.service.services: KApplicationTrader: mimeType "x-scheme-handler/d" not found
> 
> this looks like it's trying to open a d:foobar URL?

This is the match logic in the locations runner and unrelated to the bookmarks/webshortcuts runners.
Comment 6 Nicolas Fella 2022-02-12 12:50:13 UTC
What's your browser?
Comment 7 Alexander Lohnau 2022-02-12 13:50:12 UTC
I currently have firefox as my default browser set.
Comment 8 Bug Janitor Service 2022-02-12 21:00:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2005
Comment 9 Nicolas Fella 2022-02-13 09:17:03 UTC
Git commit a2ebad760fefe015c46e8bc649e38b6ecd6093bf by Nicolas Fella.
Committed on 12/02/2022 at 23:41.
Pushed by vladz into branch 'master'.

Implement services in our QPA

This is required for QDesktopServices to work.

Use QGenericUnixServices like the xcb and wayland QPA

M  +1    -0    CMakeLists.txt
M  +1    -0    src/plugins/qpa/CMakeLists.txt
M  +6    -0    src/plugins/qpa/integration.cpp
M  +3    -0    src/plugins/qpa/integration.h

https://invent.kde.org/plasma/kwin/commit/a2ebad760fefe015c46e8bc649e38b6ecd6093bf
Comment 10 Vlad Zahorodnii 2022-02-13 09:17:45 UTC
Git commit 966ac0320bc743c4ee707786a61c748ef40af2a3 by Vlad Zahorodnii, on behalf of Nicolas Fella.
Committed on 13/02/2022 at 09:17.
Pushed by vladz into branch 'Plasma/5.24'.

Implement services in our QPA

This is required for QDesktopServices to work.

Use QGenericUnixServices like the xcb and wayland QPA


(cherry picked from commit a2ebad760fefe015c46e8bc649e38b6ecd6093bf)

M  +1    -0    CMakeLists.txt
M  +1    -0    src/plugins/qpa/CMakeLists.txt
M  +6    -0    src/plugins/qpa/integration.cpp
M  +3    -0    src/plugins/qpa/integration.h

https://invent.kde.org/plasma/kwin/commit/966ac0320bc743c4ee707786a61c748ef40af2a3