Implement services in our QPA

This is required for QDesktopServices to work.

Use QGenericUnixServices like the xcb and wayland QPA

BUG: 446144


(cherry picked from commit a2ebad760fefe015c46e8bc649e38b6ecd6093bf)