src/plugins/qpa/integration.h
@@ -13,6 +13,7 @@
 #include <epoxy/egl.h>
 
 #include <qpa/qplatformintegration.h>
+#include <QtServiceSupport/private/qgenericunixservices_p.h>
 #include <QObject>
 
 namespace KWin
@@ -41,6 +42,7 @@ public:
     QStringList themeNames() const override;
     QPlatformTheme *createPlatformTheme(const QString &name) const override;
     QPlatformOpenGLContext *createPlatformOpenGLContext(QOpenGLContext *context) const override;
+    QPlatformServices *services() const override;
     void initialize() override;
 
     QHash<AbstractOutput *, Screen *> screens() const;
@@ -55,6 +57,7 @@ private:
     QPlatformNativeInterface *m_nativeInterface;
     QPlatformPlaceholderScreen *m_dummyScreen = nullptr;
     QHash<AbstractOutput *, Screen *> m_screens;
+    QScopedPointer<QGenericUnixServices> m_services;
 };
 
 }
